Fix Stream.collect usage for ScrapingServiceImpl class